quick adjustment to make it align left instead of center
idk what i was thinking to say that center is better than left

--- a/css/kuif.css
+++ b/css/kuif.css
@@ -371,7 +371,7 @@ button {
     border: none;
     outline: none;
     font-size: large;
-    text-align: center;
+/*     text-align: center; */
 }
 
 .kuif textarea {
